# gui_messenger

./: .gitignore  pyproject.toml
gb_way/lesson_08/: Инструкция.doc
gb_way/lesson_08/2_PART/exe/client/: client_test.py  setup.py
gb_way/lesson_08/2_PART/exe/server/: server_test.py  setup.py
gb_way/lesson_08/2_PART/exe/server/doc/source/: conf.py
gb_way/lesson_08/2_PART/pack_client/: setup.py
gb_way/lesson_08/Пример setup-файла для exe/: setup.py
gb_way/lesson_08/Пример setup-файла для sdist и whl/: setup.py
project_one/: client.py  server.py
project_one/client/: client_database.py  main_window.py  transport.py
project_one/common/: decos.py  utils.py
project_one/server/: core.py
project_one/unit_tests/: test_client.py  test_server.py  test_utils.py
