[tool.poetry]
name = "gui-messenger"
version = "0.1.0"
description = ""
authors = ["V-U-Simon <V-U-Simon@yandex.ru>"]
readme = "README.md"
packages = [{include = "gui_messenger"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
isort = "^5.12.0"
autoflake = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
